--- a/adk_frontend/src/components/chat/chat.module.css
+++ b/adk_frontend/src/components/chat/chat.module.css
@@ -61,6 +61,7 @@
     justify-content: flex-start;
     width: 70%;
     margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 10px;
     margin-right: auto;
 }
