--- a/adk_frontend/src/components/chat/chat.module.css
+++ b/adk_frontend/src/components/chat/chat.module.css
@@ -76,6 +76,12 @@
     text-align: left;
 }
 
+.systemMessage pre {
+    padding: 0 30px 0 0;
+    width: 100%;
+    overflow-x: auto;
+}
+
 .robotIcon {
     color: #FFC857 !important;
     font-size: 20px;
@@ -88,12 +94,23 @@
     padding: 24px;
     background-color: #343541;
     border-top: 1px solid #4A4B53;
-    display: flex;
+    display: grid;
     align-items: center;
+    grid-template-columns: 11fr 1fr;
+    grid-template-rows: auto;
     gap: 12px;
     max-width: 768px;
     margin: 0 auto;
     width: 100%;
+}
+
+.errorMessage {
+    grid-column: 1/3;
+    color: #F14A41;
+}
+
+.nameInputField {
+    grid-column: 1/3;
 }
 
 .inputField {
